# Practica-Codex-Wokwi-

./: CMakeLists.txt  README.md  diagram.json
docs/: architecture.md  wiring.md
